@@ -26,8 +26,9 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.batch.core.ItemWriteListener;
+import org.springframework.batch.item.Chunk;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
@@ -59,7 +60,7 @@ public class KanbanJiraIssueWriterListener implements ItemWriteListener<Composit
 	 * org.springframework.batch.core.ItemWriteListener#beforeWrite(java.util.List)
 	 */
 	@Override
-	public void beforeWrite(List<? extends CompositeResult> compositeResult) {
+	public void beforeWrite(Chunk<? extends CompositeResult> compositeResult) {
 		// in future we can use this method to do something before saving data in db
 	}
 
@@ -70,12 +71,12 @@ public class KanbanJiraIssueWriterListener implements ItemWriteListener<Composit
 	 * org.springframework.batch.core.ItemWriteListener#afterWrite(java.util.List)
 	 */
 	@Override
-	public void afterWrite(List<? extends CompositeResult> compositeResults) {
+	public void afterWrite(Chunk<? extends CompositeResult> compositeResults) {
 		log.info("Saving status in Processor execution Trace log for Kanban board project");
 
 		List<ProcessorExecutionTraceLog> processorExecutionToSave = new ArrayList<>();
-		List<KanbanJiraIssue> jiraIssues = compositeResults.stream().map(CompositeResult::getKanbanJiraIssue)
-				.collect(Collectors.toList());
+		List<KanbanJiraIssue> jiraIssues = compositeResults.getItems().stream().map(CompositeResult::getKanbanJiraIssue)
+				.toList();
 
 		Map<String, Map<String, List<KanbanJiraIssue>>> projectBoardWiseIssues = jiraIssues.stream()
 				.filter(issue -> !issue.getTypeName().equalsIgnoreCase(JiraConstants.EPIC))
@@ -90,10 +91,7 @@ public class KanbanJiraIssueWriterListener implements ItemWriteListener<Composit
 				KanbanJiraIssue firstIssue = boardData
 						.getValue().stream().sorted(
 								Comparator
-										.comparing((KanbanJiraIssue jiraIssue) -> LocalDateTime.parse(
-												jiraIssue.getChangeDate(),
-												DateTimeFormatter
-														.ofPattern(JiraConstants.JIRA_ISSUE_CHANGE_DATE_FORMAT)))
+										.comparing((KanbanJiraIssue jiraIssue) -> LocalDateTime.parse(jiraIssue.getChangeDate(), DateTimeFormatter.ofPattern(JiraConstants.JIRA_ISSUE_CHANGE_DATE_FORMAT)))
 										.reversed())
 						.findFirst().orElse(null);
 				if (firstIssue != null) {
@@ -129,7 +127,7 @@ public class KanbanJiraIssueWriterListener implements ItemWriteListener<Composit
 	}
 
 	@Override
-	public void onWriteError(Exception exception, List<? extends CompositeResult> compositeResult) {
+	public void onWriteError(Exception exception, Chunk<? extends CompositeResult> compositeResult) {
 		log.error("Exception occured while writing jira Issue for Kanban board project", exception);
 	}
 }
